# yandex_micro_service

./: .gitignore  Docker-compose.yml  README.md  pyproject.toml
code/backend/: Dockerfile.api  client.py  main.py
code/frontend/: Dockerfile.front  streamlit.py
