[project]
name = "yandex-micro-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
backend = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.2",
    "jwt>=1.4.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "yandex-neurosupport>=0.1.0",
]
frontend = [
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
